--- a/CoCo/front-end/admin/admin-account.html
+++ b/CoCo/front-end/admin/admin-account.html
@@ -53,24 +53,60 @@
             </div>
           </nav>
         <img src="../images/banner.png" alt="banner" class="banner">
-        <div class="container" style="padding: 20px 20px;">
-            <div class="path">
-                <a href="index.html">Trang chủ > </a>
-                <a href="#">Thông tin cá nhân > </a>
-                <a href="#">Thông tin chi tiết</a>
-            </div>
-            <div class="info-container">
-                <div class="side-info">
-                    <div id="avatar">
-                        <img src="./images/avatar.png" alt="avatar">
-                    </div>
-                    <div>
-                        <p id="username">Nguyễn Văn A</p>
-                    </div>
-                    <div id="sign-out" class="btn-money text-white">Đăng xuất</div>
-                </div>
-                <div class="detail-container">
-                    <div id="detail">  
+        <div class="container">
+            <nav style="--bs-breadcrumb-divider: '>'; --bs-breadcrumb-item-padding-x: 2px; --bs-breadcrumb-divider-color: #A19C9C; --bs-breadcrumb-font-size: 24sp;" aria-label="breadcrumb" class="nav-breadcrumb">
+                <ol class="breadcrumb">
+                  <li class="breadcrumb-item active" aria-current="page">Thông tin admin</li>
+                </ol>
+              </nav>
+            <div class="content">
+                <div class="row">
+                    <div class="col-lg-4 col-md-5 col-sm-12 d-flex flex-column">
+                        <div class="side-info bg-form p-5">
+                              <div class="avatar">
+                                  <img class="img-thumbnail" src="./images/avatar.png" alt="avatar">
+                              </div>
+                              <div id="name"></div>
+                              <div class="button">
+                                  <button type="button" class="custom-btn btn btn-dark text-white btn-sm" onclick="window.location.href='./list-manager-page.html'">Đổi mật khẩu</button>
+                              </div>
+                              <div class="button">
+                                <button type="button" class="exit-btn btn btn-dark text-white btn-sm" onclick="window.location.href='./list-manager-page.html'">Đăng xuất</button>
+                            </div>
+                        </div>
+                      </div>
+                    <div class="col-lg-8 col-md-7 col-sm-12">
+                        <div class="main-content">
+                            <h3 class="form-heading mb-3 p-2 ">Đổi mật khẩu</h3>
+                            <form class="form-add-manager p-2">
+                                <div class="form-group row">
+                                    <label for="password" class="col-lg-5 col-sm-5 col-form-label">Mật khẩu:</label>
+                                    <div class="col-lg-7 col-sm-7">
+                                    <input type="password" class="form-control" id="password">
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label for="newpassword" class="col-lg-5 col-sm-5 col-form-label">Mật khẩu mới:</label>
+                                    <div class="col-lg-7 col-sm-7">
+                                    <input type="password" class="form-control" id="newpassword">
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label for="re-newpassword" class="col-lg-5 col-sm-5 col-form-label">Nhập lại mật khẩu mới:</label>
+                                    <div class="col-lg-7 col-sm-7">
+                                    <input type="password" class="form-control" id="re-newpassword">
+                                    </div>
+                                </div>
+                            </form>
+                            <div class="row-button">
+                                <div class="col-sm-6">
+                                  <button type="button" class="btn custom-btn text-white" onclick="window.location.href='./list-manager-page.html'">Lưu</button>
+                                </div>
+                                <div class="col-sm-6">
+                                    <button type="button" class="btn exit-btn text-white" onclick="window.location.href='./list-manager-page.html'">Hủy</button>
+                                  </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
