Fix responesive design to fit various screen sizes

--- a/CoCo/front-end/related-people/cart.html
+++ b/CoCo/front-end/related-people/cart.html
@@ -71,9 +71,10 @@
                             <button id="increase">+</button>
                         </div>
                         <div class="total">175,000đ</div>
-                        <div class="remove-package">
-                            <img src="images/trash.png" style="width: 30px; height: 30px;" alt="trash_img">
-                        </div>
+                        <button class="remove-package">
+                            <img src="images/trash.png" style="width: 30px; height: 30px; align-self: center;"
+                                alt="trash_img">
+                        </button>
                     </div>
                 </div>
                 <div class="selected-package-container">
@@ -97,9 +98,10 @@
                             <button id="increase">+</button>
                         </div>
                         <div class="total">450,000đ</div>
-                        <div class="remove-package">
-                            <img src="images/trash.png" style="width: 30px; height: 30px;" alt="trash_img">
-                        </div>
+                        <button class="remove-package">
+                            <img src="images/trash.png" style="width: 30px; height: 30px; align-self: center;"
+                                alt="trash_img">
+                        </button>
                     </div>
                 </div>
                 <div class="selected-package-container">
@@ -123,9 +125,10 @@
                             <button id="increase">+</button>
                         </div>
                         <div class="total">300,000đ</div>
-                        <div class="remove-package">
-                            <img src="images/trash.png" style="width: 30px; height: 30px;" alt="trash_img">
-                        </div>
+                        <button class="remove-package">
+                            <img src="images/trash.png" style="width: 30px; height: 30px; align-self: center;"
+                                alt="trash_img">
+                        </button>
                     </div>
                 </div>
 
