--- a/CoCo/front-end/related-people/consumption-history.html
+++ b/CoCo/front-end/related-people/consumption-history.html
@@ -77,10 +77,10 @@
                         <div id="tab-consumption" class="tab" style="background-color: #EEEEEE;"><a href="consumption-history.html">Lịch sử tiêu thụ</a></div>
                         <div id="tab-payment" class="tab"><a href="payment-history.html">Lịch sử thanh toán</a></div>
                     </div>
-                    <div id="detail-history">
+                    <div class="detail-history">
                         <!--Code here-->
                         <div class="table-responsive" style="height: 100%;">
-                            <table class="table table-bordered table-striped">
+                            <table class="table table-striped">
                                 <thead style="position: sticky; top: 0; background-color: #398AB9;">
                                     <tr>
                                         <th class="text-white history-header" scope="col">Thời gian</th>
