--- a/CoCo/front-end/related-people/package-list.html
+++ b/CoCo/front-end/related-people/package-list.html
@@ -124,9 +124,9 @@
                                         <p id="current-amount">1</p>
                                         <button id="increase">+</button>
                                     </div>
-                                    <div class="add-to-cart">
+                                    <button class="add-to-cart" style="border: none;">
                                         <img src="images/cart.png" alt="cart_img">
-                                    </div>
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -151,9 +151,9 @@
                                         <p id="current-amount">1</p>
                                         <button id="increase">+</button>
                                     </div>
-                                    <div class="add-to-cart">
+                                    <button class="add-to-cart" style="border: none;">
                                         <img src="images/cart.png" alt="cart_img">
-                                    </div>
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -178,91 +178,9 @@
                                         <p id="current-amount">1</p>
                                         <button id="increase">+</button>
                                     </div>
-                                    <div class="add-to-cart">
+                                    <button class="add-to-cart" style="border: none;">
                                         <img src="images/cart.png" alt="cart_img">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6 col-sm-12">
-                            <div class="card-view">
-                                <div class="image-details">
-                                    <img class="scaled" src="images/package_demo.png" alt="package_img">
-                                    <div class="package-detail">
-                                        <p>500g Thịt heo đùi</p>
-                                        <p>500g Thịt heo đùi</p>
-                                        <p>500g Thịt heo đùi</p>
-                                        <p>500g Thịt heo đùi</p>
-                                    </div>
-                                </div>
-                                <div class="price-amount">
-                                    <div class="name-price">
-                                        Thịt cá trứng 1<br>
-                                        <span style="color: red;">175,000đ</span>
-                                    </div>
-                                    <div class="amount-modify">
-                                        <button id="decrease">-</button>
-                                        <p id="current-amount">1</p>
-                                        <button id="increase">+</button>
-                                    </div>
-                                    <div class="add-to-cart">
-                                        <img src="images/cart.png" alt="cart_img">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12">
-                            <div class="card-view">
-                                <div class="image-details">
-                                    <img class="scaled" src="images/package_demo.png" alt="package_img">
-                                    <div class="package-detail">
-                                        <p>500g Thịt heo đùi</p>
-                                        <p>500g Thịt heo đùi</p>
-                                        <p>500g Thịt heo đùi</p>
-                                        <p>500g Thịt heo đùi</p>
-                                    </div>
-                                </div>
-                                <div class="price-amount">
-                                    <div class="name-price">
-                                        Thịt cá trứng 1<br>
-                                        <span style="color: red;">175,000đ</span>
-                                    </div>
-                                    <div class="amount-modify">
-                                        <button id="decrease">-</button>
-                                        <p id="current-amount">1</p>
-                                        <button id="increase">+</button>
-                                    </div>
-                                    <div class="add-to-cart">
-                                        <img src="images/cart.png" alt="cart_img">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12">
-                            <div class="card-view">
-                                <div class="image-details">
-                                    <img class="scaled" src="images/package_demo.png" alt="package_img">
-                                    <div class="package-detail">
-                                        <p>500g Thịt heo đùi</p>
-                                        <p>500g Thịt heo đùi</p>
-                                        <p>500g Thịt heo đùi</p>
-                                        <p>500g Thịt heo đùi</p>
-                                    </div>
-                                </div>
-                                <div class="price-amount">
-                                    <div class="name-price">
-                                        Thịt cá trứng 1<br>
-                                        <span style="color: red;">175,000đ</span>
-                                    </div>
-                                    <div class="amount-modify">
-                                        <button id="decrease">-</button>
-                                        <p id="current-amount">1</p>
-                                        <button id="increase">+</button>
-                                    </div>
-                                    <div class="add-to-cart">
-                                        <img src="images/cart.png" alt="cart_img">
-                                    </div>
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -288,9 +206,9 @@
                                         <p id="current-amount">1</p>
                                         <button id="increase">+</button>
                                     </div>
-                                    <div class="add-to-cart">
+                                    <button class="add-to-cart" style="border: none;">
                                         <img src="images/cart.png" alt="cart_img">
-                                    </div>
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -315,9 +233,9 @@
                                         <p id="current-amount">1</p>
                                         <button id="increase">+</button>
                                     </div>
-                                    <div class="add-to-cart">
+                                    <button class="add-to-cart" style="border: none;">
                                         <img src="images/cart.png" alt="cart_img">
-                                    </div>
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -342,9 +260,9 @@
                                         <p id="current-amount">1</p>
                                         <button id="increase">+</button>
                                     </div>
-                                    <div class="add-to-cart">
+                                    <button class="add-to-cart" style="border: none;">
                                         <img src="images/cart.png" alt="cart_img">
-                                    </div>
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -370,9 +288,9 @@
                                         <p id="current-amount">1</p>
                                         <button id="increase">+</button>
                                     </div>
-                                    <div class="add-to-cart">
+                                    <button class="add-to-cart" style="border: none;">
                                         <img src="images/cart.png" alt="cart_img">
-                                    </div>
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -397,9 +315,9 @@
                                         <p id="current-amount">1</p>
                                         <button id="increase">+</button>
                                     </div>
-                                    <div class="add-to-cart">
+                                    <button class="add-to-cart" style="border: none;">
                                         <img src="images/cart.png" alt="cart_img">
-                                    </div>
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -424,9 +342,91 @@
                                         <p id="current-amount">1</p>
                                         <button id="increase">+</button>
                                     </div>
-                                    <div class="add-to-cart">
+                                    <button class="add-to-cart" style="border: none;">
                                         <img src="images/cart.png" alt="cart_img">
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-4 col-md-6 col-sm-12">
+                            <div class="card-view">
+                                <div class="image-details">
+                                    <img class="scaled" src="images/package_demo.png" alt="package_img">
+                                    <div class="package-detail">
+                                        <p>500g Thịt heo đùi</p>
+                                        <p>500g Thịt heo đùi</p>
+                                        <p>500g Thịt heo đùi</p>
+                                        <p>500g Thịt heo đùi</p>
                                     </div>
+                                </div>
+                                <div class="price-amount">
+                                    <div class="name-price">
+                                        Thịt cá trứng 1<br>
+                                        <span style="color: red;">175,000đ</span>
+                                    </div>
+                                    <div class="amount-modify">
+                                        <button id="decrease">-</button>
+                                        <p id="current-amount">1</p>
+                                        <button id="increase">+</button>
+                                    </div>
+                                    <button class="add-to-cart" style="border: none;">
+                                        <img src="images/cart.png" alt="cart_img">
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-sm-12">
+                            <div class="card-view">
+                                <div class="image-details">
+                                    <img class="scaled" src="images/package_demo.png" alt="package_img">
+                                    <div class="package-detail">
+                                        <p>500g Thịt heo đùi</p>
+                                        <p>500g Thịt heo đùi</p>
+                                        <p>500g Thịt heo đùi</p>
+                                        <p>500g Thịt heo đùi</p>
+                                    </div>
+                                </div>
+                                <div class="price-amount">
+                                    <div class="name-price">
+                                        Thịt cá trứng 1<br>
+                                        <span style="color: red;">175,000đ</span>
+                                    </div>
+                                    <div class="amount-modify">
+                                        <button id="decrease">-</button>
+                                        <p id="current-amount">1</p>
+                                        <button id="increase">+</button>
+                                    </div>
+                                    <button class="add-to-cart" style="border: none;">
+                                        <img src="images/cart.png" alt="cart_img">
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-sm-12">
+                            <div class="card-view">
+                                <div class="image-details">
+                                    <img class="scaled" src="images/package_demo.png" alt="package_img">
+                                    <div class="package-detail">
+                                        <p>500g Thịt heo đùi</p>
+                                        <p>500g Thịt heo đùi</p>
+                                        <p>500g Thịt heo đùi</p>
+                                        <p>500g Thịt heo đùi</p>
+                                    </div>
+                                </div>
+                                <div class="price-amount">
+                                    <div class="name-price">
+                                        Thịt cá trứng 1<br>
+                                        <span style="color: red;">175,000đ</span>
+                                    </div>
+                                    <div class="amount-modify">
+                                        <button id="decrease">-</button>
+                                        <p id="current-amount">1</p>
+                                        <button id="increase">+</button>
+                                    </div>
+                                    <button class="add-to-cart" style="border: none;">
+                                        <img src="images/cart.png" alt="cart_img">
+                                    </button>
                                 </div>
                             </div>
                         </div>
