--- a/CoCo/front-end/related-people/payment-history.html
+++ b/CoCo/front-end/related-people/payment-history.html
@@ -79,10 +79,10 @@
                         <div id="tab-payment" class="tab" style="background-color: #EEEEEE;"><a
                                 href="payment-history.html">Lịch sử thanh toán</a></div>
                     </div>
-                    <div id="detail-history" style="display: flex; justify-content: center;">
+                    <div class="detail-history" style="display: flex; justify-content: center;">
                         <!--Code here-->
-                        <div class="table-responsive" style="height: 100%; width: 50%;">
-                            <table class="table table-bordered table-striped">
+                        <div class="table-responsive" style="height: 100%; width: 50%; min-width: 300px;">
+                            <table class="table table-striped">
                                 <thead style="position: sticky; top: 0; background-color: #398AB9;">
                                     <tr>
                                         <th class="text-white history-header" scope="col">Thời gian</th>
