update responsive detail product page

--- a/CoCo/front-end/manager/products/product-detail-page.html
+++ b/CoCo/front-end/manager/products/product-detail-page.html
@@ -19,7 +19,7 @@
     <main>
         <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="../index.html">
                     <img class="logo-img" src="../../images/Logo.png" alt="logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -55,7 +55,7 @@
         <img src="/CoCo/front-end/images/banner.png" alt="banner" class="banner">
         <div class="content">
             <div class="path">
-                <a href="/trang-chu">Trang chủ > </a>
+                <a href="../index.html">Trang chủ > </a>
                 <a href="product-list-page.html">Nhu yếu phẩm > </a>
                 <a href="product-list-page.html">Danh sách nhu yếu phẩm > </a>
                 <a href="product-detail-page.html">Thịt heo 500 gram</a>
@@ -77,23 +77,8 @@
                     <div style="display: flex;  justify-content: center; align-items: center; width: 100%; position: relative;">
                         <i id="leftlst" class="fa-solid fa-angle-left fa-3x my-btn" style="color:#9F8D8D;"></i>
                         <div class="product-img-carousel">
-                            <div id="heoheo" style="display:flex;">
-                            <div class="img-scale detail-image-list active">
-                                <img src="images/thit-heo.jpg" style="max-width: 100%; max-height:100%; " alt="">
-                            </div>
-                            <div class="img-scale detail-image-list">
-                                <img src="images/thit-heo.jpg" style="max-width: 100%; max-height:100%; " alt="">
-                            </div>
-                            <div class="img-scale detail-image-list">
-                                <img src="images/thit-heo.jpg" style="max-width: 100%; max-height:100%; " alt="">
-                            </div>
-                            <div class="img-scale detail-image-list">
-                                <img src="images/thit-heo.jpg" style="max-width: 100%; max-height:100%; " alt="">
-                            </div>
-                            <div class="img-scale detail-image-list">
-                                <img src="images/thit-heo.jpg" style="max-width: 100%; max-height:100%; " alt="">
-                            </div>
-                            <div class="img-scale detail-image-list">
+                            <div id="shift" style="display:flex;">
+                            <div class="img-scale detail-image-list active my-btn">
                                 <img src="images/thit-heo.jpg" style="max-width: 100%; max-height:100%; " alt="">
                             </div>
                         </div>
