--- a/CoCo/front-end/manager/products/add-product-page.html
+++ b/CoCo/front-end/manager/products/add-product-page.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="stylesheet" href="../../css/template-style.css">
     <link rel="stylesheet" href="css/product-style.css">
@@ -16,20 +18,45 @@
 
 <body>
     <main>
-        <nav class="navbar">
-            <img class="logo-img my-btn" src="/CoCo/front-end/images/Logo.png" alt="logo">
-            <ul class="nav-list">
-                <li><a href="#" class="nav-links">NGƯỜI LIÊN QUAN COVID-19</a></li>
-                <li><a href="#" class="nav-links">NHU YẾU PHẨM</a></li>
-                <li><a href="#" class="nav-links">THỐNG KÊ</a></li>
-                <li><a href="#" class="nav-links">THANH TOÁN</a></li>
-            </ul>
-            <div class="nav-menu"><i class="fa-solid fa-bars fa-2x"></i></div>
+        <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html">
+                    <img class="logo-img" src="../../images/Logo.png" alt="logo">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">NGƯỜI LIÊN QUAN COVID-19</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                NHU YẾU PHẨM
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="#">GÓI SẢN PHẨM</a></li>
+                                <li><a class="dropdown-item" href="#">SẢN PHẨM</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">THỐNG KÊ</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">THANH TOÁN</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
         <img src="/CoCo/front-end/images/banner.png" alt="banner" class="banner">
         <div class="content">
             <div class="path">
-                <a href="/trang-chu">Trang chủ > </a>
+                <a href="../index.html">Trang chủ > </a>
                 <a href="product-list-page.html">Nhu yếu phẩm > </a>
                 <a href="product-list-page.html">Danh sách nhu yếu phẩm > </a>
                 <a href="add-product-page.html">Thêm nhu yếu phẩm </a>
