Change demo data for static pages

--- a/CoCo/front-end/related-people/cart.html
+++ b/CoCo/front-end/related-people/cart.html
@@ -46,6 +46,7 @@
         <div class="content" style="padding: 20px 20px;">
             <div class="path">
                 <a href="index.html">Trang chủ > </a>
+                <a href="package-list.html">Nhu yếu phẩm > </a>
                 <a href="#">Giỏ hàng</a>
             </div>
 
