--- a/CoCo/front-end/related-people/payment-history.html
+++ b/CoCo/front-end/related-people/payment-history.html
@@ -59,10 +59,10 @@
                         </div>
                     </div>
                     <div class="main-info">
-                        <div class="info-tag">CMND:&nbsp;123456789000</div>
-                        <div class="info-tag">Ngày sinh:&nbsp;21/04/2001</div>
-                        <div class="info-tag">Dư nợ:&nbsp;<span style="color: red;">-750,000đ</span></div>
-                        <div class="info-tag">Tài khoản:&nbsp;<span style="color: green">1,350,000đ</span></div>
+                        <div class="info-tag">CMND: 123456789000</div>
+                        <div class="info-tag">Ngày sinh: 21/04/2001</div>
+                        <div class="info-tag">Dư nợ: <span style="color: red;">-750,000đ</span></div>
+                        <div class="info-tag">Tài khoản: <span style="color: green">1,350,000đ</span></div>
                     </div>
                     <div id="account" class="d-inline-flex justify-content-around">
                         <div id="payment" class="btn-money text-white">Thanh toán
