--- a/CoCo/front-end/admin/index.html
+++ b/CoCo/front-end/admin/index.html
@@ -19,8 +19,8 @@
 <body>
     <main class="index">
         <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">
+            <div class="container-fluid" style="float:left !important; width: calc(100% - 70px) !important;">
+                <a class="navbar-brand" href="./">
                     <img src="../images/Logo.png" alt="logo" style="height:65px;align-self:center;">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -36,9 +36,14 @@
                                 QUẢN LÝ
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="./managers/list-manager-page.html">XEM DANH SÁCH</a></li>
-                                <li><a class="dropdown-item" href="./managers/add-manager-page.html">THÊM NGƯỜI QUẢN LÝ</a></li>
-                                <li><a class="dropdown-item" href="./managers/list-manager-history-page.html">LỊCH SỬ HOẠT ĐỘNG</a></li>
+                                <li><a class="dropdown-item" href="./managers/list-manager-page.html">XEM DANH
+                                        SÁCH</a>
+                                </li>
+                                <li><a class="dropdown-item" href="./managers/add-manager-page.html">THÊM NGƯỜI QUẢN
+                                        LÝ</a></li>
+                                <li><a class="dropdown-item" href="./managers/list-manager-history-page.html">LỊCH
+                                        SỬ
+                                        HOẠT ĐỘNG</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -47,12 +52,26 @@
                                 ĐỊA ĐIỂM
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="./addresses/address-detail-page.html">XEM DANH SÁCH</a></li>
-                                <li><a class="dropdown-item" href="./addresses/add-address-page.html">THÊM ĐỊA ĐIỂM</a></li>
+                                <li><a class="dropdown-item" href="./addresses/address-detail-page.html">XEM DANH
+                                        SÁCH</a></li>
+                                <li><a class="dropdown-item" href="./addresses/add-address-page.html">THÊM ĐỊA
+                                        ĐIỂM</a>
+                                </li>
                             </ul>
                         </li>
                     </ul>
                 </div>
+            </div>
+            <div class="btn-group" style="float:right; margin-right: 10px;">
+                <button type="button" class="avt btn rounded-circle" data-bs-toggle="dropdown" aria-expanded="false">
+                    <img class="rounded-circle" src="../images/avatar.jpg" style="width:50px;" />
+                </button>
+                <ul class="dropdown-menu dropdown-menu-end">
+                    <li><a class="dropdown-item" href="#">ĐỔI MẬT
+                            KHẨU</a></li>
+                    <li><a class="dropdown-item" href="#">ĐĂNG XUẤT</a>
+                    </li>
+                </ul>
             </div>
         </nav>
         <section>
