fix style and fix homepage

--- a/CoCo/front-end/admin/index.html
+++ b/CoCo/front-end/admin/index.html
@@ -64,7 +64,7 @@
             </div>
             <div class="btn-group" style="float:right; margin-right: 10px;">
                 <button type="button" class="avt btn rounded-circle" data-bs-toggle="dropdown" aria-expanded="false">
-                    <img class="rounded-circle" src="../images/avatar.jpg" style="width:50px;" />
+                    <img class="rounded-circle" src="../images/avatar.jpg" style="width:50px; " />
                 </button>
                 <ul class="dropdown-menu dropdown-menu-end">
                     <li><a class="dropdown-item" href="#">ĐỔI MẬT
@@ -78,7 +78,7 @@
             <img src="../images/banner.png" alt="banner" class="banner">
         </section>
 
-        <section class="content container-fluid py-5" style="height:300px">
+        <section class="container py-5" style="height:300px">
             <h1 class="welcome" style="width:auto">Chào mừng đến với hệ thống quản lý Covid-19</h1>
         </section>
 
