--- a/CoCo/front-end/index.html
+++ b/CoCo/front-end/index.html
@@ -29,7 +29,7 @@
             <img src="images/banner.png" alt="banner" class="banner">
         </section>
 
-        <section class="content container-fluid py-5">
+        <section class="container py-5" style="height:500px">
             <h1 class="welcome">Chào mừng đến với hệ thống quản lý Covid-19</h1>
 
             <div class="login-form py-5 px-5">
@@ -48,6 +48,15 @@
                 </form>
                 <a href="#" class="password-missing">Quên mật khẩu?</a>
             </div>
+
+            <h3 style="clear:both; font-style: italic;">Bạn muốn vào phân hệ người dùng nào?</h3>
+            <ul>
+                <li><a style="font-style: italic;" href="./managers/list-manager-page.html">QUẢN TRỊ VIÊN</a>
+                </li>
+                <li><a style="font-style: italic;" href="./managers/add-manager-page.html">NGƯỜI QUẢN LÝ</a></li>
+                <li><a style="font-style: italic;" href="./managers/list-manager-history-page.html">NGƯỜI ĐƯỢC QUẢN LÝ</a></li>
+            </ul>
+            <div style="font-style: italic;">(Phần này chỉ phục vụ việc chuyển luồng đến các phân hệ người dùng và sẽ không xuất hiện trong sản phẩm cuối cùng.)</h3>
 
         </section>
 
