--- a/CoCo/front-end/manager/products/add-product-page.html
+++ b/CoCo/front-end/manager/products/add-product-page.html
@@ -8,7 +8,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../../css/style.css">
-    <link rel="stylesheet" href="../../css/template-style.css">
     <link rel="stylesheet" href="css/product-style.css">
     <link rel="stylesheet" href="css/add-product-page.css">
     <script src="https://kit.fontawesome.com/67328d2701.js" crossorigin="anonymous"></script>
@@ -61,14 +60,14 @@
                 <a href="product-list-page.html">Danh sách nhu yếu phẩm > </a>
                 <a href="add-product-page.html">Thêm nhu yếu phẩm </a>
             </div>
-            <div class="add-product" style="width:100%; margin:auto 20%;">
-                <h2 style="font-size:36sp;">THÊM NHU YẾU PHẨM</h2>
+            <div class="add-product">
+                <h2 style="font-size:36px;">THÊM NHU YẾU PHẨM</h2>
                 <form action="">
                     <div>
                         <label class="label-product" for="product-name">Tên</label><br>
-                        <input class="input-product" type="text" id="product-name" name="name" placeholder="Nhập tên" style="width:60%;"><br>
+                        <input class="input-product" type="text" id="product-name" name="name" placeholder="Nhập tên" style="width:100%;"><br>
                     </div>
-                    <div style="width:calc(60% + 10px); margin-top:10px;">
+                    <div style="width:calc(100%); margin-top:10px;">
                         <div class="product-price">
                             <label class="label-product" for="product-price">Giá</label><br>
                             <div class="input-product" style=" padding:0;">
@@ -96,9 +95,9 @@
                             <i class="fa-solid fa-plus fa-3x" style="color:var(--grey1);"></i>
                         </div>
                     </div>
-                    <div style="width:60%; text-align:center;">
-                        <a class="btn-primary" href="product-list-page.html" style="background-color:var(--blue2);">XÁC NHẬN</a>
-                        <a class="btn-primary" href="product-list-page.html" style="background-color:#535353;">HỦY</a>
+                    <div style="width:100%; text-align:center;">
+                        <a class="my-btn btn-primary" href="product-list-page.html" style="background-color:var(--blue2);">XÁC NHẬN</a>
+                        <a class="my-btn btn-primary" href="product-list-page.html" style="background-color:#535353;">HỦY</a>
                     </div>
                 </form>
             </div>
