add avata toggle

--- a/CoCo/front-end/admin/index.html
+++ b/CoCo/front-end/admin/index.html
@@ -86,8 +86,7 @@
             <div class="footer-top">
                 <div class="footer-box">
                     <h3>VỀ CHÚNG TÔI</h3>
-                    <p>CoCo là website quản lý danh sách người liên quan đến Covid-19, đồng thời cung cấp phương thức
-                        thanh toán trực tuyến để mua nhu yếu phẩm ở các địa điểm cách ly và điều trị.</p>
+                    <p>CoCo là website quản lý danh sách người liên quan đến Covid-19, đồng thời cung cấp phương thức thanh toán trực tuyến để mua nhu yếu phẩm ở các địa điểm cách ly và điều trị.</p>
                 </div>
                 <div class="footer-box">
                     <h3>LIÊN HỆ</h3>
