--- a/CoCo/front-end/admin/admin-account.html
+++ b/CoCo/front-end/admin/admin-account.html
@@ -15,43 +15,63 @@
 </head>
 
 <body>
-    <main>
-        <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="./index.html">
-                    <img src="../../images/Logo.png" alt="logo" style="height:50px;align-self:center;">
-                </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <main class="index">
+      <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid" style="float:left !important; width: calc(100% - 70px) !important;">
+            <a class="navbar-brand" href="./">
+                <img src="../images/Logo.png" alt="logo" style="height:65px;align-self:center;">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav m-auto mb-2 mb-lg-0">
-                  <li class="nav-item dropdown">
-                    <a class="nav-link active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      NGƯỜI QUẢN LÝ
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="./managers/add-manager-page.html">Thêm người quản lý</a></li>
-                      <li><a class="dropdown-item" href="./managers/list-manager-page.html">Danh sách người quản lý</a></li>
-                      <li><a class="dropdown-item" href="./managers/list-manager-history-page.html">Danh sách lịch sử người quản lý</a></li>
-                    </ul>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      ĐỊA ĐIỂM CÁCH LY, ĐIỀU TRỊ
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">Thêm địa điểm cách ly, điều trị</a></li>
-                      <li><a class="dropdown-item" href="#">Danh sách địa điểm cách ly điều trị</a></li>
-                    </ul>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./admin-account.html">TÀI KHOẢN ADMIN</a>
-                </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            QUẢN LÝ
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="./managers/list-manager-page.html">XEM DANH
+                                    SÁCH</a>
+                            </li>
+                            <li><a class="dropdown-item" href="./managers/add-manager-page.html">THÊM NGƯỜI QUẢN
+                                    LÝ</a></li>
+                            <li><a class="dropdown-item" href="./managers/list-manager-history-page.html">LỊCH
+                                    SỬ
+                                    HOẠT ĐỘNG</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            ĐỊA ĐIỂM
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="./addresses/address-detail-page.html">XEM DANH
+                                    SÁCH</a></li>
+                            <li><a class="dropdown-item" href="./addresses/add-address-page.html">THÊM ĐỊA
+                                    ĐIỂM</a>
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
-              </div>
             </div>
-          </nav>
+        </div>
+        <div class="btn-group" style="float:right; margin-right: 10px;">
+            <button type="button" class="avt btn rounded-circle" data-bs-toggle="dropdown" aria-expanded="false">
+                <img class="rounded-circle" src="../images/avatar.jpg" style="width:50px; " />
+            </button>
+            <ul class="dropdown-menu dropdown-menu-end">
+                <li><a class="dropdown-item" href="#">ĐỔI MẬT
+                        KHẨU</a></li>
+                <li><a class="dropdown-item" href="#">ĐĂNG XUẤT</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
         <img src="../images/banner.png" alt="banner" class="banner">
         <div class="container">
             <nav style="--bs-breadcrumb-divider: '>'; --bs-breadcrumb-item-padding-x: 2px; --bs-breadcrumb-divider-color: #A19C9C; --bs-breadcrumb-font-size: 24sp;" aria-label="breadcrumb" class="nav-breadcrumb">
