--- a/CoCo/front-end/related-people/index.html
+++ b/CoCo/front-end/related-people/index.html
@@ -55,7 +55,7 @@
             <img src="../images/banner.png" alt="banner" class="banner">
         </section>
 
-        <section class="content container-fluid py-5" style="height:300px">
+        <section class="container-fluid py-5" style="height:300px">
             <h1 class="welcome" style="width:auto">Chào mừng đến với hệ thống quản lý Covid-19</h1>
         </section>
 
