Add account control button to navbar of related people pages

--- a/CoCo/front-end/related-people/package-list.html
+++ b/CoCo/front-end/related-people/package-list.html
@@ -20,8 +20,8 @@
 <body>
     <main>
         <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+            <div class="container-fluid" style="float:left !important; width: calc(100% - 70px) !important;">
+                <a class="navbar-brand" href="index.html">
                     <img src="../images/Logo.png" alt="logo" style="height:65px;align-self:center;">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -42,6 +42,17 @@
                         </li>
                     </ul>
                 </div>
+            </div>
+            <div class="btn-group" style="float:right; margin-right: 10px;">
+                <button type="button" class="avt btn rounded-circle" data-bs-toggle="dropdown" aria-expanded="false">
+                    <img class="rounded-circle" src="../images/avatar.jpg" style="width:50px; " />
+                </button>
+                <ul class="dropdown-menu dropdown-menu-end">
+                    <li><a class="dropdown-item" href="#">ĐỔI MẬT
+                            KHẨU</a></li>
+                    <li><a class="dropdown-item" href="#">ĐĂNG XUẤT</a>
+                    </li>
+                </ul>
             </div>
         </nav>
         <img src="../images/banner.png" alt="banner" class="banner">
