--- a/CoCo/front-end/admin/managers/add-manager-page.html
+++ b/CoCo/front-end/admin/managers/add-manager-page.html
@@ -24,11 +24,25 @@
             <a class="navbar-brand" href="./">
                 <img src="../../images/Logo.png" alt="logo" style="height:65px;align-self:center;">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+            <div id="togglers">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                  aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="btn-group" style="float:right;">
+                  <button type="button" class="avt btn rounded-circle" data-bs-toggle="dropdown"
+                      aria-expanded="false">
+                      <img class="rounded-circle" src="../../images/avatar.jpg" style="width:50px; " />
+                  </button>
+                  <ul class="dropdown-menu dropdown-menu-end">
+                      <li><a class="dropdown-item" href="../admin-account.html">ĐỔI MẬT
+                              KHẨU</a></li>
+                      <li><a class="dropdown-item" href="../index.html">ĐĂNG XUẤT</a>
+                      </li>
+                  </ul>
+              </div>
+          </div>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav m-auto mb-2 mb-lg-0">
                     <li class="nav-item dropdown">
@@ -62,17 +76,6 @@
                     </li>
                 </ul>
             </div>
-        </div>
-        <div class="btn-group" style="float:right; margin-right: 10px;">
-            <button type="button" class="avt btn rounded-circle" data-bs-toggle="dropdown" aria-expanded="false">
-                <img class="rounded-circle" src="../../images/avatar.jpg" style="width:50px; " />
-            </button>
-            <ul class="dropdown-menu dropdown-menu-end">
-                <li><a class="dropdown-item" href="../admin-account.html">ĐỔI MẬT
-                        KHẨU</a></li>
-                <li><a class="dropdown-item" href="#">ĐĂNG XUẤT</a>
-                </li>
-            </ul>
         </div>
     </nav>
         
