update the latest version of products manager

--- a/CoCo/front-end/manager/products/product-list-page.html
+++ b/CoCo/front-end/manager/products/product-list-page.html
@@ -21,7 +21,7 @@
     <main>
         <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="../index.html">
                     <img class="logo-img" src="../../images/Logo.png" alt="logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -57,7 +57,7 @@
         <img src="/CoCo/front-end/images/banner.png" alt="banner" class="banner">
         <div class="content">
             <div class="path">
-                <a href="/trang-chu">Trang chủ > </a>
+                <a href="../index.html">Trang chủ > </a>
                 <a href="product-list-page.html">Nhu yếu phẩm > </a>
                 <a href="product-list-page.html">Danh sách nhu yếu phẩm</a>
             </div>
