--- a/CoCo/front-end/manager/products/add-product-page.html
+++ b/CoCo/front-end/manager/products/add-product-page.html
@@ -19,7 +19,7 @@
     <main>
         <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="../index.html">
                     <img class="logo-img" src="../../images/Logo.png" alt="logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
