fix content size and avata togglers

--- a/CoCo/front-end/index.html
+++ b/CoCo/front-end/index.html
@@ -35,8 +35,7 @@
             <div class="login-form py-5 px-5">
                 <form>
                     <div class="form-floating mb-3">
-                        <input class="form-control border-2 border-dark" id="floatingInput"
-                            placeholder="0123456789">
+                        <input class="form-control border-2 border-dark" id="floatingInput" placeholder="0123456789">
                         <label for="floatingInput">Số CMND/CCCD</label>
                     </div>
                     <div class="form-floating">
@@ -49,14 +48,17 @@
                 <a href="#" class="password-missing">Quên mật khẩu?</a>
             </div>
 
-            <h3 style="clear:both; font-style: italic;">Bạn muốn vào phân hệ người dùng nào?</h3>
-            <ul>
-                <li><a style="font-style: italic;" href="./managers/list-manager-page.html">QUẢN TRỊ VIÊN</a>
-                </li>
-                <li><a style="font-style: italic;" href="./managers/add-manager-page.html">NGƯỜI QUẢN LÝ</a></li>
-                <li><a style="font-style: italic;" href="./managers/list-manager-history-page.html">NGƯỜI ĐƯỢC QUẢN LÝ</a></li>
-            </ul>
-            <div style="font-style: italic;">(Phần này chỉ phục vụ việc chuyển luồng đến các phân hệ người dùng và sẽ không xuất hiện trong sản phẩm cuối cùng.)</h3>
+            <div style="clear:both;">
+                <h3 style="font-style: italic;">Bạn muốn vào phân hệ người dùng nào?</h3>
+                <ul>
+                    <li><a style="font-style: italic;" href="./admin/">QUẢN TRỊ VIÊN</a>
+                    </li>
+                    <li><a style="font-style: italic;" href="./manager">NGƯỜI QUẢN LÝ</a></li>
+                    <li><a style="font-style: italic;" href="./related-people/">NGƯỜI ĐƯỢC QUẢN LÝ</a></li>
+                </ul>
+                <div style="font-style: italic;">(Phần này chỉ phục vụ việc chuyển luồng đến các phân hệ người dùng và
+                    sẽ không xuất hiện trong sản phẩm cuối cùng.)</h3>
+                </div>
 
         </section>
 
