--- a/CoCo/front-end/admin/admin-account.html
+++ b/CoCo/front-end/admin/admin-account.html
@@ -17,7 +17,7 @@
 <body>
     <main class="index">
       <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid" style="float:left !important; width: calc(100% - 70px) !important;">
+        <div class="container-fluid">
             <a class="navbar-brand" href="./">
                 <img src="../images/Logo.png" alt="logo" style="height:65px;align-self:center;">
             </a>
