--- a/CoCo/front-end/admin/managers/add-manager-page.html
+++ b/CoCo/front-end/admin/managers/add-manager-page.html
@@ -22,7 +22,7 @@
       <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="./">
-                <img src="../../images/Logo.png" alt="logo" style="height:65px;align-self:center;">
+                <img class="logo-img" src="../../images/Logo.png" alt="logo">
             </a>
             <div id="togglers">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
