--- a/CoCo/front-end/index.html
+++ b/CoCo/front-end/index.html
@@ -21,7 +21,7 @@
         <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="images/Logo.png" alt="logo" style="height:65px;align-self:center;">
+                    <img class="logo-img" src="images/Logo.png" alt="logo">
                 </a>
             </div>
         </nav>
@@ -29,7 +29,7 @@
             <img src="images/banner.png" alt="banner" class="banner">
         </section>
 
-        <section class="container py-5" style="height:500px">
+        <section class="container py-5" style="height:800px">
             <h1 class="welcome">Chào mừng đến với hệ thống quản lý Covid-19</h1>
 
             <div class="login-form py-5 px-5">
@@ -48,7 +48,7 @@
                 <a href="#" class="password-missing">Quên mật khẩu?</a>
             </div>
 
-            <div style="clear:both;">
+            <div style="clear:both; float:right; width: 500px; padding-top: 50px;">
                 <h3 style="font-style: italic;">Bạn muốn vào phân hệ người dùng nào?</h3>
                 <ul>
                     <li><a style="font-style: italic;" href="./admin/">QUẢN TRỊ VIÊN</a>
